Support KWindowSystem interface with activation support

Allow internal uses of KWindowSystem to support activating other
clients.

BUG: 453748
BUG: 453785