src/plugins/windowsystem/windowsystem.h
@@ -12,7 +12,7 @@
 namespace KWin
 {
 
-class WindowSystem : public QObject, public KWindowSystemPrivate
+class WindowSystem : public QObject, public KWindowSystemPrivateV2
 {
     Q_OBJECT
 public:
@@ -66,6 +66,10 @@ public:
     QPoint constrainViewportRelativePosition(const QPoint &pos) override;
 
     void connectNotify(const QMetaMethod &signal) override;
+
+    void requestToken(QWindow *win, uint32_t serial, const QString &app_id) override;
+    void setCurrentToken(const QString &token) override;
+    quint32 lastInputSerial(QWindow *window) override;
 };
 
 }
